موارد حذف شده موقعی ک برق رف

--- a/Debugram.Api/appsettings.json
+++ b/Debugram.Api/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppConfig": {
+    "JwtSetting": {
+      "secretKey": "Senator001200120",
+      "EncryptKey": "Senator001200120",
+      "RequireSignedTokens": "true",
+      "ValidateIssuerSigningKey": "true",
+      "RequireExpirationTime": "true",
+      "ValidateLifetime": "true",
+      "ValidateAudience": "true",
+      "ValidAudience": "MyWebSite",
+      "ValidIssuer": "MyWebSite",
+      "ValidateIssuer": "true",
+      "SaveToken": "true",
+      "RequireHttpsMetadata": "false",
+      "NotBefore": "0",
+      "Expires": "60"
+    }
+  }
 }
