--- a/Debugram.Api/appsettings.json
+++ b/Debugram.Api/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Debugram": "Data Source = DESKTOP-J1P2NT8\\SERVER;Initial Catalog=DebugramDB;Integrated Security=True"
+  },
   "AllowedHosts": "*",
   "AppConfig": {
     "JwtSetting": {
