--- a/Debugram.Service/Debugram.Service.csproj
+++ b/Debugram.Service/Debugram.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Debugram.Common\Debugram.Utilities.csproj" />
+    <ProjectReference Include="..\Debugram.Data.Service\Debugram.Data.Service.csproj" />
   </ItemGroup>
 
 </Project>
