درست کردن Register and login

--- a/Debugram.Api/appsettings.json
+++ b/Debugram.Api/appsettings.json
@@ -25,6 +25,7 @@
       "RequireHttpsMetadata": "false",
       "NotBefore": "0",
       "Expires": "60"
-    }
+    },
+    "PrivateKey": "Senator0012"
   }
 }
