--- a/Debugram.AdminModel/Debugram.AdminModel.csproj
+++ b/Debugram.AdminModel/Debugram.AdminModel.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Debugram.Common\Debugram.Utilities.csproj" />
     <ProjectReference Include="..\Debugram.Entities\Debugram.Entities.csproj" />
   </ItemGroup>
 
