--- a/Debugram.CommonModel/Debugram.CommonModel.csproj
+++ b/Debugram.CommonModel/Debugram.CommonModel.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Debugram.Common\Debugram.Utilities.csproj" />
     <ProjectReference Include="..\Debugram.Entities\Debugram.Entities.csproj" />
   </ItemGroup>
 
