--- a/Debugram.Service/Debugram.Service.csproj
+++ b/Debugram.Service/Debugram.Service.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Debugram.Common\Debugram.Utilities.csproj" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Debugram.Data.Service\Debugram.Data.Service.csproj" />
   </ItemGroup>
 
